K8s/Istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: knote-vs
  namespace: application
spec:
  hosts:
    - knote-cluster.duckdns.org
  gateways:
    - knote-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: knote-service
            port:
              number: 3000
